Modify csproj and nuspec for CI build

--- a/src/NanoLeaf.API/NanoLeaf.API.csproj
+++ b/src/NanoLeaf.API/NanoLeaf.API.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Silverdark</Authors>
+    <PackageId>nanoleaf.api</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
