Add versions to csproj file (needed that CI can patch them correctly)

--- a/src/NanoLeaf.API/NanoLeaf.API.csproj
+++ b/src/NanoLeaf.API/NanoLeaf.API.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Silverdark</Authors>
     <PackageId>nanoleaf.api</PackageId>
+    <Version>1.0.0.0</Version>
+    <PackageVersion>1.0.0.0</PackageVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0.0</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
