--- a/src/NanoLeaf.API/NanoLeaf.API.csproj
+++ b/src/NanoLeaf.API/NanoLeaf.API.csproj
@@ -2,8 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Silverdark</Authors>
+    <Title>NanoLeaf API</Title>
     <PackageId>nanoleaf.api</PackageId>
+    <Description>Wrapper for the NanoLeaf API based on the Nanoleaf Light Panels OpenAPI.</Description>
+    <Authors>Silverdark</Authors>
+    <Copyright>Copyright 2019 Silverdark</Copyright>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/Silverdark/NanoLeaf.API</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>1.0.0.0</Version>
     <PackageVersion>1.0.0.0</PackageVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
