--- a/src/NanoLeaf.API/NanoLeaf.API.csproj
+++ b/src/NanoLeaf.API/NanoLeaf.API.csproj
@@ -9,6 +9,7 @@
     <Copyright>Copyright 2019 Silverdark</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/Silverdark/NanoLeaf.API</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Silverdark/NanoLeaf.API</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>1.0.0.0</Version>
     <PackageVersion>1.0.0.0</PackageVersion>
